2008-09-18  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        Expose titleUIElement call for DumpRenderTree

        * ChangeLog:
        * DumpRenderTree/AccessibilityUIElement.cpp:
        (titleUIElementCallback):
        (AccessibilityUIElement::getJSClass):
        * DumpRenderTree/AccessibilityUIElement.h:
        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        (AccessibilityUIElement::titleUIElement):

2008-09-18  Darin Adler  <darin@apple.com>

        * Scripts/do-webcore-rename: More renaming plans.

2008-09-18  Mark Rowe  <mrowe@apple.com>

        Reviewed by Dan Bernstein.

        Clear the main frame's name between tests to get more consistent test results
        when running the WebKit tests with --nthly.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetWebViewToConsistentStateBeforeTesting):
        * DumpRenderTree/win/DumpRenderTree.cpp:
        (resetWebViewToConsistentStateBeforeTesting):

2008-09-18  Stephanie Lewis  <slewis@apple.com>

        Really fix tiger jsc tests.

        * Scripts/run-javascriptcore-tests:

2008-09-18  Stephanie Lewis  <slewis@apple.com>

        Reviewed by Maciej Stachowiak.

        Fix jsc tests on Tiger.  Make jsc tests smarter about when to use the arch flag.

        * Scripts/run-javascriptcore-tests:
        * Scripts/webkitdirs.pm:

2008-09-18  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Sam Weinig.

        Print warning to stdout rather than stderr when a test attempts to access a remote resource.
        This should make it more obvious when a test does this, as stderr output tends to be obscured
        by noise in the test results.

        Also fixes some coding style issues in ResourceLoadDelegate.mm.

        * DumpRenderTree/mac/ResourceLoadDelegate.mm:
        (-[NSError _drt_descriptionSuitableForTestResult]):
        (-[NSURL _drt_descriptionSuitableForTestResult]):